--- a/app/views/deals/_body_coupon.html.erb
+++ b/app/views/deals/_body_coupon.html.erb
@@ -16,22 +16,6 @@
 </div>
  -->
 
-<!-- <div class="card clearfix" data-tags="Category">
-  <div class="img_box">
-     <a target="_blank" href="Product_link"><img src="Image_Link" alt="" /> </a>
-  </div>
-  <div class="inner">
-    <span class="regular"><em>Percentage% OFF</em> + free shipping</span>
-    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="Product_link">Product_details</a></p>
-    <span class="dis_price">$Discount_Price</span><span class="org_price">$Original_Price</span>
-  </div> 
-  <div class="deal_btn">
-    <a href="Product_link">Shop Now</a>
-  </div>
-</div> -->
-
-
 <div class="card clearfix" data-tags="Coupons"><!--(Coupons or Deals)-->
   <div class="info_box">
     <a target="_blank" href="https://amzn.to/2GDUFvg">
@@ -64,6 +48,41 @@
   </div> 
   <div class="deal_btn">
     <a target="_blank" href="https://amzn.to/2H452rS">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Sales">
+  <div class="info_box">
+    <a target="_blank" href="https://amzn.to/2JxHv4A">
+      <p>30%<br /><em>OFF</em></p>
+    </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>Sales</em></span>
+    <h3><a target="_blank" href="https://amzn.to/2JxHv4A">Up to 30% off | Amazon Elements</a></h3>
+    <p>Amazon Elements is a line of premium everyday essentials exclusively available to Amazon Prime members.</br >If you are not an Amazon Prime member, sign up for the <a target="_blank" href="https://amzn.to/2vT0fmW">Amazon Prime Free Trial.</a></p>
+
+    <span>Expiration: On going</span>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JxHv4A">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Coupons">
+  <div class="info_box">
+    <a target="_blank" href="https://amzn.to/2VsrqUS">
+      <p>50%<br /><em>OFF</em></p>
+    </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>Coupon</em></span>
+    <h3><a target="_blank" href="https://amzn.to/2VsrqUS">Up to 50% off | Electronics Clippable Coupons</a></h3>
+    <p>Get savings of up to 50% off on electronic clippable coupons for all kind of electronics, cellphone&accessories and computers etc...</p>
+    <span>Expiration: On going</span>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2VsrqUS">Shop Now</a>
   </div>
 </div>
 
@@ -153,42 +172,6 @@
     </div>
 </div>
 
-<!-- <div class="card clearfix" data-tags="Sales">
-    <div class="info_box">
-      <a target="_blank" href="https://amzn.to/2O2aXjc">
-        <p><span>30%</span><br /><em>OFF</em></p>
-      </a>
-    </div>
-    <div class="inner">
-      <span class="regular"><em>Sales</em></span>
-      <h3><a target="_blank" href="https://amzn.to/2O2aXjc">Amazon | 30% Off Beauty&Health</a></h3>
-      <p>Up to 30% off Beauty&Health</p>
-      <span>Expiration: on going</span>
-    </div> 
-    <div class="deal_btn">
-      <a target="_blank" href="https://amzn.to/2O2aXjc">Shop Now</a>
-    </div>
-</div> -->
-
-<!-- <div class="card clearfix" data-tags="Sales">
-  <div class="info_box">
-    <div class="img_box">
-       <a target="_blank" href="https://amzn.to/2UIg7Dm">
-        <img src="https://images.unsplash.com/photo-1538022890810-8f4000ca9a10?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="" />
-       </a>
-    </div>
-  </div>
-  <div class="inner">
-    <span class="regular"><em>Sales</em></span>
-    <h3><a target="_blank" href="https://amzn.to/2UIg7Dm">Amazon | KOREAN BEAUTY</a></h3>
-    <p>Amazon offers various Korean Beauty brands. From Skin Care to Makeup and curated the innovative Korean Beauty products from the most wanted brands including COSRX, The Face Shop, Etude House, Skederm, Dermal and Nature Republic.</p>
-    <span>Expiration: on going</span>
-  </div> 
-  <div class="deal_btn">
-    <a href="https://amzn.to/2UIg7Dm">Shop Now</a>
-  </div>
-</div> -->
-
 <div class="card clearfix" data-tags="Sales">
   <div class="info_box">
     <a target="_blank" href="https://amzn.to/2O2ywbK">
@@ -240,7 +223,67 @@
   </div>
 </div>
 
-<!--------------------------------------------------- Deals --------------------------------------------------->
+<!--------------------------------------------------- Section_Deals ------------------------------------------------>
+
+<!-- <div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="Product_Link"><img src="Image_link" alt="" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>Percentage% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="Product_Link">Products_detail</a></p>
+    <span class="dis_price">$Dis_Price</span><span class="org_price">$Ori_Price</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="Product_Link">Shop Now</a>
+  </div>
+</div> -->
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2VgnLVd"><img src="https://images-na.ssl-images-amazon.com/images/I/41g4Idd4y9L._SY606_.jpg" alt="Apple AirPods with Charging Case" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>12% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2VgnLVd">Apple AirPods with Charging Case (Latest Model)</a></p>
+    <span class="dis_price">$139.99</span><span class="org_price">$159.00</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2VgnLVd">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2Vt3iS8"><img src="https://m.media-amazon.com/images/I/51zfdgObzsL._AC_UL320_.jpg" alt="Samsung Genuine DA29-00003G Refrigerator Water Filter" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>58% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2Vt3iS8">Samsung Genuine DA29-00003G Refrigerator Water Filter</a></p>
+    <span class="dis_price">$23.04</span><span class="org_price">$55.00</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2Vt3iS8">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-tags="Deals">
+  <div class="img_box">
+     <a target="_blank" href="https://amzn.to/2VsqS1g"><img src="https://m.media-amazon.com/images/I/81B+4phWROL._AC_UL320_.jpg" alt="Kasa Smart WiFi Plug Mini by TP-Link" /> </a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>28% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2VsqS1g">Kasa Smart WiFi Plug Mini by TP-Link - Reliable WiFi Connection, No Hub Required, Works with Alexa Echo & Google Assistant </a></p>
+    <span class="dis_price">$17.99</span><span class="org_price">$24.99</span>
+  </div> 
+  <div class="deal_btn">
+    <a href="https://amzn.to/2VsqS1g">Shop Now</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-tags="Deals">
   <div class="img_box">
@@ -249,7 +292,7 @@
   <div class="inner">
     <span class="regular"><em>51% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2E2TsM7">XFX Radeon RX 580 GTS XXX Edition 1386MHz OC+, 8GB GDDR5, VR Ready, Dual BIOS, 3xDP HDMI DVI, AMD Graphics Card</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2E2TsM7">XFX Radeon RX 580 GTS XXX Edition 1386MHz OC+, 8GB GDDR5, VR Ready, Dual BIOS, 3xDP HDMI DVI, AMD Graphics Card</a></p>
     <span class="dis_price">$184.99</span><span class="org_price">$379.99</span>
   </div> 
   <div class="deal_btn">
@@ -264,7 +307,7 @@
   <div class="inner">
     <span class="regular"><em>12% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2vGttWc">TP-Link | AC750 Wifi Extender | Up to 750Mbps | Dual Band Range Extender, Repeater, Wifi Signal Booster</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2vGttWc">TP-Link | AC750 Wifi Extender | Up to 750Mbps | Dual Band Range Extender, Repeater, Wifi Signal Booster</a></p>
     <span class="dis_price">$29.99</span><span class="org_price">$33.99</span>
   </div> 
   <div class="deal_btn">
@@ -279,7 +322,7 @@
   <div class="inner">
     <span class="regular"><em>53% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2LpNdYL">Samsung EP-NG930TBUGUS Qi Certified Fast Charge Wireless Charging Stand W/ AFC Wall Charger - Black</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2LpNdYL">Samsung EP-NG930TBUGUS Qi Certified Fast Charge Wireless Charging Stand W/ AFC Wall Charger - Black</a></p>
     <span class="dis_price">$28.00</span><span class="org_price">$59.99</span>
   </div> 
   <div class="deal_btn">
@@ -294,7 +337,7 @@
   <div class="inner">
     <span class="regular"><em>60% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2PNG3fj">Fujifilm INSTAX Share SP-2 Mobile Printer (Gold)</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2PNG3fj">Fujifilm INSTAX Share SP-2 Mobile Printer (Gold)</a></p>
     <span class="dis_price">$79.99</span><span class="org_price">$199.99</span>
   </div> 
   <div class="deal_btn">
@@ -309,7 +352,7 @@
   <div class="inner">
     <span class="regular"><em>10% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2YbkIPX">Seagate Backup Plus Portable External Hard Drive 4TB USB 3.0, Silver + 2mo Adobe CC Photography</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2YbkIPX">Seagate Backup Plus Portable External Hard Drive 4TB USB 3.0, Silver + 2mo Adobe CC Photography</a></p>
     <span class="dis_price">$89.99</span><span class="org_price">$99.99</span>
   </div> 
   <div class="deal_btn">
@@ -324,7 +367,7 @@
   <div class="inner">
     <span class="regular"><em>14% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2vEvKRw">SanDisk SSD PLUS 1TB Internal SSD - SATA III 6 Gb/s, 2.5"/7mm - SDSSDA-1T00-G26</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2vEvKRw">SanDisk SSD PLUS 1TB Internal SSD - SATA III 6 Gb/s, 2.5"/7mm - SDSSDA-1T00-G26</a></p>
     <span class="dis_price">$107.99</span><span class="org_price">$124.99</span>
   </div> 
   <div class="deal_btn">
@@ -340,7 +383,7 @@
   <div class="inner">
     <span class="regular"><em>52% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2VLzlMm">SanDisk 2TB Extreme Portable External SSD - USB-C, USB 3.1 - SDSSDE60-2T00-G25</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2VLzlMm">SanDisk 2TB Extreme Portable External SSD - USB-C, USB 3.1 - SDSSDE60-2T00-G25</a></p>
     <span class="dis_price">$336.12</span><span class="org_price">$699.99</span>
   </div> 
   <div class="deal_btn">
@@ -355,7 +398,7 @@
   <div class="inner">
     <span class="regular"><em>19% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2VinQMY">SanDisk Ultra Flair 128GB USB 3.0 Flash Drive - SDCZ73-128G-G46</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2VinQMY">SanDisk Ultra Flair 128GB USB 3.0 Flash Drive - SDCZ73-128G-G46</a></p>
     <span class="dis_price">$19.99</span><span class="org_price">$24.76</span>
   </div> 
   <div class="deal_btn">
@@ -370,7 +413,7 @@
   <div class="inner">
     <span class="regular"><em>21% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2ZY66Fm">Apple MacBook Air (13-inch Retina display, 1.6GHz dual-core Intel Core i5, 128GB)</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2ZY66Fm">Apple MacBook Air (13-inch Retina display, 1.6GHz dual-core Intel Core i5, 128GB)</a></p>
     <span class="dis_price">$949.99</span><span class="org_price">$1,199.00</span>
   </div> 
   <div class="deal_btn">
@@ -385,7 +428,7 @@
   <div class="inner">
     <span class="regular"><em>15% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2VfuDXK">SanDisk 256GB Ultra MicroSDXC UHS-I Memory Card with Adapter - 100MB/S, C10, U1, Full HD, A1, Micro SD Card - SDSQUAR-256G-GN6MA</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2VfuDXK">SanDisk 256GB Ultra MicroSDXC UHS-I Memory Card with Adapter - 100MB/S, C10, U1, Full HD, A1, Micro SD Card - SDSQUAR-256G-GN6MA</a></p>
     <span class="dis_price">$37.99</span><span class="org_price">$44.79</span>
   </div> 
   <div class="deal_btn">
@@ -400,7 +443,7 @@
   <div class="inner">
     <span class="regular"><em>62% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2DPORN3">SanDisk 128GB Extreme microSDXC UHS-I Memory Card with Adapter - C10, U3, V30, 4K, A2, Micro SD - SDSQXA1-128G-GN6MA</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2DPORN3">SanDisk 128GB Extreme microSDXC UHS-I Memory Card with Adapter - C10, U3, V30, 4K, A2, Micro SD - SDSQXA1-128G-GN6MA</a></p>
     <span class="dis_price">$25.99</span><span class="org_price">$68.99</span>
   </div> 
   <div class="deal_btn">
@@ -415,7 +458,7 @@
   <div class="inner">
     <span class="regular"><em>52% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2VKuiMb">Logitech M510 Wireless Computer Mouse – Comfortable Shape with USB Unifying Receiver, with Back/Forward Buttons and Side-to-Side Scrolling, Dark Gray</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2VKuiMb">Logitech M510 Wireless Computer Mouse – Comfortable Shape with USB Unifying Receiver, with Back/Forward Buttons and Side-to-Side Scrolling, Dark Gray</a></p>
     <span class="dis_price">$19.00</span><span class="org_price">$39.99</span>
   </div> 
   <div class="deal_btn">
@@ -430,7 +473,7 @@
   <div class="inner">
     <span class="regular"><em>50% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2WnE1Fp">Portal from Facebook. Smart, Hands-Free Video Calling with Alexa Built-in</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2WnE1Fp">Portal from Facebook. Smart, Hands-Free Video Calling with Alexa Built-in</a></p>
     <span class="dis_price">$99.00</span><span class="org_price">$199.00</span>
   </div> 
   <div class="deal_btn">
@@ -445,7 +488,7 @@
   <div class="inner">
     <span class="regular"><em>58% OFF</em> + free shipping</span>
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
-    <p><a target="_blank" href="https://amzn.to/2DNwdFr">HP ENVY 5055 Wireless All-in-One Photo Printer, HP Instant Ink & Amazon Dash Replenishment ready (M2U85A)</a></p>
+    <p class="inner4deals"><a target="_blank" href="https://amzn.to/2DNwdFr">HP ENVY 5055 Wireless All-in-One Photo Printer, HP Instant Ink & Amazon Dash Replenishment ready (M2U85A)</a></p>
     <span class="dis_price">$49.89</span><span class="org_price">$119.99</span>
   </div> 
   <div class="deal_btn">
