--- a/app/views/promocodes_days/_day_04.html.erb
+++ b/app/views/promocodes_days/_day_04.html.erb
@@ -7,7 +7,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2VknMfy">SoundPEATS Bluetooth Headphones, IPX7 Sweatproof Sports Wireless Earbuds, in-Ear Stereo Bluetooth Earphones with Mic</a></p>
     <div class="code_high">
-      <p><span>Take <strong>30% off at $20.99</strong> using code:30LJY6K6</span></p>
+      <p><span>Take <strong>30% off at $20.99</strong> using code:<strong>30LJY6K6</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -25,7 +25,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JrmBnt">Mini Projector, Full HD 1080P and 170'' Support, Oiiwak 2600 Lumen Portable Movie Projector</a></p>
     <div class="code_high">
-      <p><span>Take <strong>35% off at $79.95</strong> using code:35W7HAVT</span></p>
+      <p><span>Take <strong>35% off at $79.95</strong> using code:<strong>35W7HAVT</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -43,7 +43,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2H62s4F">Dularf Water Flosser Cordless Oral Irrigator Rechargeable IPX7 Waterproof Teeth Cleaner with LCD Display...</a></p>
     <div class="code_high">
-      <p><span>Take <strong>50% off at $39.99</strong> using code:507PTBTN</span></p>
+      <p><span>Take <strong>50% off at $39.99</strong> using code:<strong>507PTBTN</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -61,7 +61,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2HacXnW">Portable Soundcore Bluetooth Speaker with Loud Stereo Sound, Rich Bass with Holder...</a></p>
     <div class="code_high">
-      <p><span>Take <strong>50% off at $21.58</strong> using code:50CCCYUM</span></p>
+      <p><span>Take <strong>50% off at $21.58</strong> using code:<strong>50CCCYUM</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -79,7 +79,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2VnRS1Y">Bluetooth Headphones, XINBAOHONG Wireless Mini Sports Earphones in Ear Headset Built-in Microphone...</a></p>
     <div class="code_high">
-      <p><span>Take <strong>60% off at $39.99</strong> using code:603QZA1Y</span></p>
+      <p><span>Take <strong>60% off at $39.99</strong> using code:<strong>603QZA1Y</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -97,7 +97,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JlOb5H">Wieppo in Ear Headphones - 3D Wired Headset 4 Drivers Metal Stereo Earbuds</a></p>
     <div class="code_high">
-      <p><span>Take <strong>60% off at $23.99</strong> using code:603NY87L</span></p>
+      <p><span>Take <strong>60% off at $23.99</strong> using code:<strong>603NY87L</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -115,7 +115,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JpEuTN">USB C Hub, 9 in 1 USB Type C Adapter with 4K USB C to HDMI, 1080P USB C to VGA...</a></p>
     <div class="code_high">
-      <p><span>Take <strong>15% off at $45.99</strong> using code:15VQQLSA</span></p>
+      <p><span>Take <strong>15% off at $45.99</strong> using code:<strong>15VQQLSA</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -133,7 +133,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2H64npT">SEEHONOR Laptop Backpack, Slim Business Computer Backpack with USB Charging Cable and Port...</a></p>
     <div class="code_high">
-      <p><span>Take <strong>36% off at $21.99</strong> using code:36BOK4DU</span></p>
+      <p><span>Take <strong>36% off at $21.99</strong> using code:<strong>36BOK4DU</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -151,7 +151,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2JpGoDV">USB 3.1Type-C to HDMI Adapter Tuwejia 4K+USB 3.0+USB-C Converter Cable Charging Port Adapter Cable</a></p>
     <div class="code_high">
-      <p><span>Take <strong>30% off at $19.98</strong> using code:30MNTF57</span></p>
+      <p><span>Take <strong>30% off at $19.98</strong> using code:<strong>30MNTF57</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -169,7 +169,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2VLFCrr">YAMAHA Unified Communications YVC-200 Portable Wireless Bluetooth USB Conference Speaker</a></p>
     <div class="code_high">
-      <p><span>Take <strong>10% off at $210.00</strong> using code:10TECHMEOUT</span></p>
+      <p><span>Take <strong>10% off at $210.00</strong> using code:<strong>10TECHMEOUT</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -187,7 +187,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2V6T3xI">Battery Base for Amazon Echo Dot 2, KUOAS Powerful Docking Station for Amazon Echo Dot 2nd Generation Alexa Speaker</a></p>
     <div class="code_high">
-      <p><span>Take <strong>60% off at $31.19</strong> using code:60Y6GR24</span></p>
+      <p><span>Take <strong>60% off at $31.19</strong> using code:<strong>60Y6GR24</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -205,7 +205,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Ycdjju">Kawany HDMI to RCA, HDMI AV Video Audio Composite PAL/NTSC Converter</a></p>
     <div class="code_high">
-      <p><span>Take <strong>45% off at $8.99</strong> using code:45OHO4WX</span></p>
+      <p><span>Take <strong>45% off at $8.99</strong> using code:<strong>45OHO4WX</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -223,7 +223,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DTslTs">SD TF Card Reader,USB to Lightning Adapter,4 in 1 Lightning Cable to USB Camera Adapter</a></p>
     <div class="code_high">
-      <p><span>Take <strong>50% off at $17.99</strong> using code:503XXUPQ</span></p>
+      <p><span>Take <strong>50% off at $17.99</strong> using code:<strong>503XXUPQ</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -241,7 +241,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2YcdDPe">iPad 9.7 2018 2017 / Air 1/2 Case - Soweiek Leather Folio Protective Stand Smart Cover Auto Wake/Sleep</a></p>
     <div class="code_high">
-      <p><span>Take <strong>50% off at $14.89</strong> using code:50CGPS8Z</span></p>
+      <p><span>Take <strong>50% off at $14.89</strong> using code:<strong>50CGPS8Z</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -259,7 +259,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2VMQV2E">G-FAVOR Laptop Backpack Business Travel Backpack with USB Charging Port Water Resistant Daypack College School Computer Backpacks</a></p>
     <div class="code_high">
-      <p><span>Take <strong>30% off at $38.99</strong> using code:30368NAX</span></p>
+      <p><span>Take <strong>30% off at $38.99</strong> using code:<strong>30368NAX</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -277,7 +277,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2H78cLL">G-FAVOR Business Laptop Backpack with USB Charging Port for Men Womens Hiking Travel College School Backpacks </a></p>
     <div class="code_high">
-      <p><span>Take <strong>30% off at $37.99</strong> using code:30KO5NVG</span></p>
+      <p><span>Take <strong>30% off at $37.99</strong> using code:<strong>30KO5NVG</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -295,7 +295,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2DSvJhj">Favoto Car Phone Mount Cell Phone Holder Universal Multifunction Car Mount</a></p>
     <div class="code_high">
-      <p><span>Take <strong>60% off at $15.99</strong> using code:606E1YO9</span></p>
+      <p><span>Take <strong>60% off at $15.99</strong> using code:<strong>606E1YO9</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -313,7 +313,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2YbT4SO">3 in 1 Wireless Charger with Multi-Port USB 3.0 Hub Charge Extender Data Sync, Desktop Wireless Charging Station Compatiable for Samsung S9/S8/S8 Plus/Note 8 and More</a></p>
     <div class="code_high">
-      <p><span>Take <strong>50% off at $39.98</strong> using code:50AEMB6K</span></p>
+      <p><span>Take <strong>50% off at $39.98</strong> using code:<strong>50AEMB6K</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -331,7 +331,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2VgHkS2">Knife Set,6-Piece Kitchen Knife Set with Wooden Block Germany High Carbon Stainless Steel Knife Block Set</a></p>
     <div class="code_high">
-      <p><span>Take <strong>15% off at $39.98</strong> using code:15ORD8A1</span></p>
+      <p><span>Take <strong>15% off at $39.98</strong> using code:<strong>15ORD8A1</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -349,7 +349,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Jlw9As">Knife Set,15-Piece Kitchen Knife Set with Block Wooden,Chef Knife Set with Sharpener,Germany High Carbon Stainless Steel Knife Block Set,Boxed Knife Sets</a></p>
     <div class="code_high">
-      <p><span>Take <strong>15% off at $64.98</strong> using code:15ZTYVR1</span></p>
+      <p><span>Take <strong>15% off at $64.98</strong> using code:<strong>15ZTYVR1</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -367,7 +367,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2H65LJ6">Glass Straws Clear 9" x 10 mm Drinking Straws Reusable Straws Healthy, Reusable...</a></p>
     <div class="code_high">
-      <p><span>Take <strong>55% off at $6.99</strong> using code:558722SB</span></p>
+      <p><span>Take <strong>55% off at $6.99</strong> using code:<strong>558722SB</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -385,7 +385,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Vi09UU">Ovente KS960BG Electric Kettle, Cordless Tea and Water Heater, Automatic Shut-Off & Boil-Dry Protection,</a></p>
     <div class="code_high">
-      <p><span>Take <strong>35% off at $19.99</strong> using code:352ULR2D</span></p>
+      <p><span>Take <strong>35% off at $19.99</strong> using code:<strong>352ULR2D</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -403,7 +403,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2E4Vzz1">Ovente KG612S Electric Kettle, 1.7L, 1500W (120V), Stainless Steel & Borosilicate Glass, Auto Shut-Off</a></p>
     <div class="code_high">
-      <p><span>Take <strong>40% off at $39.99</strong> using code:40Q13BXC</span></p>
+      <p><span>Take <strong>40% off at $39.99</strong> using code:<strong>40Q13BXC</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -421,7 +421,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2Vk9prT">Ovente 1 JE7607BR Wide Mouth Juicer High Speed Juice Extractor for Fruits and Vegetables</a></p>
     <div class="code_high">
-      <p><span>Take <strong>40% off at $59.99</strong> using code:406SH448</span></p>
+      <p><span>Take <strong>40% off at $59.99</strong> using code:<strong>406SH448</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -439,7 +439,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2YfRHCT">Tea Infuser Set by Chefast (1+1 Pack) - Combo Kit of Single Cup and Large Infusers, Plus Metal Scoop with Clip - Reusable Stainless Steel Strainers</a></p>
     <div class="code_high">
-      <p><span>Take <strong>36% off at $13.99</strong> using code:36N7BZXX</span></p>
+      <p><span>Take <strong>36% off at $13.99</strong> using code:<strong>36N7BZXX</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -457,7 +457,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/303lgsM">WiFi Smart Plug Smart Outlet Works with Amazon Alexa and IFTTT Google Assistant Remote Control Your Devices from Anywhere</a></p>
     <div class="code_high">
-      <p><span>Take <strong>50% off at $29.99</strong> using code:30JE9HCI</span></p>
+      <p><span>Take <strong>50% off at $29.99</strong> using code:<strong>30JE9HCI</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -475,7 +475,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2PT4at9">Yiomxhi Ab Roller Wheel with Knee Pad Ultra-Wide Abs Wheel Abdominal Workout Equipment Core Exercise Wheel</a></p>
     <div class="code_high">
-      <p><span>Take <strong>25% off at $25.99</strong> using code:25943I8I</span></p>
+      <p><span>Take <strong>25% off at $25.99</strong> using code:<strong>25943I8I</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -493,7 +493,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2H6b3EM">KingCamp Envelope Sleeping Bag 3 Season Lightweight Comfort Portable Great for Adults, kids...</a></p>
     <div class="code_high">
-      <p><span>Take <strong>50% off at $59.99</strong> using code:50X3TXLP</span></p>
+      <p><span>Take <strong>50% off at $59.99</strong> using code:<strong>50X3TXLP</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
@@ -511,7 +511,7 @@
     <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
     <p><a target="_blank" href="https://amzn.to/2VnMwDJ">JJTGS 3D Professional Printing 3D Pen with OLED Display Bonus One PCL Filament</a></p>
     <div class="code_high">
-      <p><span>Take <strong>50% off at $69.96</strong> using code:5053BU7R</span></p>
+      <p><span>Take <strong>50% off at $69.96</strong> using code:<strong>5053BU7R</strong></span></p>
       <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
