--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -29,6 +29,7 @@
   .codes .rt_cnt .sort_box ul li{float:left;width:100px;margin:0 5px;}
   .codes .rt_cnt .sort_box ul li a{font-size:20px;font-family: 'Anton', sans-serif;line-height:1.1;text-decoration:none;color:#000;display:block;text-align:center;padding:5px;}
   .codes .rt_cnt .sort_box ul li a:hover{background:#000;color:#fff;}
+  .codes .rt_cnt .updating{font-size:30px;font-size:20px;font-family: 'Anton', sans-serif;margin-bottom:100px;}
 
   .codes .card_wrap{margin:20px 0 0 0;}
   .codes .card_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;}
@@ -133,7 +134,8 @@
   .coupons .coupons_wrap .card .inner h3{font-weight:bold;line-height:1.2;margin-top:5px;}
   .coupons .coupons_wrap .card .inner h3>a{text-decoration:none;color:#000;font-size:17px;}
   .coupons .coupons_wrap .card .inner p{margin:10px 0;line-height:1.2;height:4.8em;overflow:hidden;}
-  .coupons .coupons_wrap .card .inner p>a{text-decoration:none;color:#616161;}
+  .coupons .coupons_wrap .card .inner p>a{text-decoration:none;color:#08f;}
+  .coupons .coupons_wrap .card .inner .inner4deals{height:auto;}
   .coupons .coupons_wrap .card .inner span{}
   .coupons .coupons_wrap .card .deal_btn{border-left:1px solid #ccc;float:left;width:15%;padding:1%;text-align:center;margin:50px 0;}
   .coupons .coupons_wrap .card .deal_btn a{text-decoration:none;color:#000;border:1px solid;padding:10px 17px;}
