--- a/app/views/deals/promo_codes.html.erb
+++ b/app/views/deals/promo_codes.html.erb
@@ -52,7 +52,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Promotion Codes on Amazon May. 10. 2019.</h2>
+        <h2>Promotion Codes on Amazon May. 11. 2019.</h2>
         
         <div class="sort_box clearfix">
           <ul>
@@ -67,6 +67,7 @@
         <div class="card_wrap sort-list">
           <%= render 'deals/body_promocode' %>
         </div>
+        <p class="updating">Promotional codes are still updating... :D</h2>
         
       </div><!--./rt_cnt-->    
 
